// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toggleServerEpic when server is down actions snapshot when on api request errors 1`] = `
Array [
  Object {
    "id": "some id",
    "isOn": false,
    "type": "InspectServer/SWITCH_BUTTON_CLICKED",
  },
  Object {
    "reason": "error message",
    "type": "toggleServer/FAILED",
  },
]
`;

exports[`toggleServerEpic when server is down actions snapshot when response object hasn't got errors 1`] = `
Array [
  Object {
    "id": "some id",
    "isOn": false,
    "type": "InspectServer/SWITCH_BUTTON_CLICKED",
  },
  Object {
    "id": "some id",
    "type": "toggleServer/SUCCEEDED",
  },
]
`;

exports[`toggleServerEpic when server is up actions snapshot when on api request errors 1`] = `
Array [
  Object {
    "id": "some id",
    "isOn": false,
    "type": "InspectServer/SWITCH_BUTTON_CLICKED",
  },
  Object {
    "reason": "error message",
    "type": "toggleServer/FAILED",
  },
]
`;

exports[`toggleServerEpic when server is up actions snapshot when response object hasn't got errors 1`] = `
Array [
  Object {
    "id": "some id",
    "isOn": false,
    "type": "InspectServer/SWITCH_BUTTON_CLICKED",
  },
]
`;
